<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clWordGameFirstMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <com.metaplikasyon.potkal.fragments.fragment_word_game.first.views.BtnStartWordGame
        android:id="@+id/btnStartWordGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_corners_rd10"
        android:text="@string/start_word_gane"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llWordGameFirstSubMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_rounded_corners_rd10"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnStartWordGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWordGameFirstQuestionType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_type"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rbGroupWordGameFirstQType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:checkedButton="@id/rbWordGameByCollectionOrder">

                <RadioButton
                    android:id="@+id/rbWordGameByCollectionOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_collection_order"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbWordGameByLetterCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_letter_count"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbWordGameByRandom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/tvWordGameFirstSelectSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_set"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/llWrdGameSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>