<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clWordGameMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTestFirstSubMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_corners_rd10"
        app:layout_constraintBottom_toTopOf="@+id/btnStartWordTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llTestFirstUpper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvQstnType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_question_choice"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rdGrpQType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkedButton="@id/rdBtnQWrdDef">

                <RadioButton
                    android:id="@+id/rdBtnQWrdDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_definition"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdBtnQDefWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/definition_word"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTestFirstLower"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llTestFirstUpper">

            <TextView
                android:id="@+id/tvWordGameFirstSelectSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_set"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/llWrdGameSets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.metaplikasyon.potkal.fragments.fragment_test.first_screen.views.buttons.BtnStartTest
        android:id="@+id/btnStartWordTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_corners_rd10"
        android:text="@string/start_test"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>