<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <ScrollView
        android:id="@+id/svDlgAddWordDef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_rounded_corners_rd10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.metaplikasyon.potkal.fragments.fragment_worddef.views.spinners.SpinnerPts
                            android:id="@+id/spnrPtsDlgAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:text="@string/difficulty"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/spnrPtsDlgAdd"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.EtDlg
                        android:id="@+id/etDlgAddWrd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_dialog_custom_et"
                        android:hint="@string/word_hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingBottom="2dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.EtDlg
                        android:id="@+id/etDlgAddDef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg_dialog_custom_et"
                        android:hint="@string/definition"
                        android:paddingBottom="2dp"
                        android:textAlignment="center"
                        android:textColorHint="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.EtDlg
                        android:id="@+id/etDlgAddKind"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:background="@drawable/bg_dialog_custom_et"
                        android:hint="@string/kind"
                        android:importantForAutofill="no"
                        android:paddingBottom="2dp"
                        android:textAlignment="center"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:visibility="visible"
                        tools:ignore="RtlCompat" />

                    <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.EtDlg
                        android:id="@+id/etDlgAddLang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_dialog_custom_et"
                        android:hint="@string/lang"
                        android:importantForAutofill="no"
                        android:paddingBottom="2dp"
                        android:textAlignment="center"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.EtDlgExmp
                        android:id="@+id/etDlgAddExmp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_dialog_custom_et"
                        android:hint="@string/example"
                        android:paddingBottom="2dp"
                        android:textAlignment="center"
                        android:textColorHint="#000000"
                        android:textSize="16sp"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.BtnDlg
                    android:id="@+id/btnDsplyTdkAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_dialog_custom_btn"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/tdk_results"
                    android:textAlignment="center"
                    android:textColor="#E8DCB8"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/pbTdkAdd"
                    style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:alpha="0"
                    android:indeterminate="true"
                    android:indeterminateTint="#0088CF"
                    android:visibility="visible" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.BtnDlg
                    android:id="@+id/btnDlgAddWrdSetCncl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_dialog_custom_btn"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="#E8DCB8"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.BtnDlg
                    android:id="@+id/btnDlgAddWrdSetAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_dialog_custom_btn"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="#E8DCB8"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>