<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/llDlgChngWrdSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_rounded_corners_rd10"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.EtDlg
            android:id="@+id/etDlgChngWrdSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_custom_et"
            android:ems="10"
            android:hint="@string/set_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.BtnDlg
                android:id="@+id/btnDlgChngWrdSetCncl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_custom_btn"
                android:text="@string/cancel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <com.metaplikasyon.potkal.fragments.fragment_worddef.dialog.dialog.views.BtnDlg
                android:id="@+id/btnDlgChngWrdSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_custom_btn"
                android:text="@string/change_capital_tr" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>